@@ -2,6 +2,11 @@
  *
  */
 
+2008-12-09 09:25 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  + src/wxbase/baseclasses/wx_commandevent.cpp
+  + src/wxbase/baseclasses/wxhcommandevent.prg
+    * added missing sources to the repository
+
 2008-12-05 11:28 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * GNUmakefile
   * makefile.gcc
